--- a/nrf51422/README.org
+++ b/nrf51422/README.org
@@ -4,14 +4,24 @@ Install the Nordic SDK v11:
 
 #+begin_src bash :eval never
 cd /tmp && wget https://developer.nordicsemi.com/nRF5_SDK/nRF5_SDK_v11.x.x/nRF5_SDK_11.0.0_89a8197.zip
-unzip nRF5_SDK_11.0.0_89a8197.zip && rm nRF5_SDK_11.0.0_89a8197.zip
+mkdir nRF5_SDK_11.0.0_89a8197 && cd nRF5_SDK_11.0.0_89a8197
+unzip ../nRF5_SDK_11.0.0_89a8197.zip && rm ../nRF5_SDK_11.0.0_89a8197.zip && cd ..
 sudo mv nRF5_SDK_11.0.0_89a8197 /opt
 #+end_src
 
 Export an environment variable pointing to it:
 
 #+begin_src bash :eval never
-export NORDIC_SEMI_SDK="/path/to/sdk"
+export NORDIC_SEMI_SDK_V11="/path/to/sdk"
+#+end_src
+
+Install an old version of the [[https://developer.arm.com/downloads/-/gnu-rm][ARM GNU toolchain]], the =v6-2016-q4-major= is
+known to work:
+
+#+begin_src bash :eval never
+cd /tmp && wget https://developer.arm.com/-/media/Files/downloads/gnu-rm/6-2016q4/gcc-arm-none-eabi-6_2-2016q4-20161216-linux.tar.bz2
+cd /opt && sudo tar xjvf /tmp/gcc-arm-none-eabi-6_2-2016q4-20161216-linux.tar.bz2
+rm /tmp/gcc-arm-none-eabi-6_2-2016q4-20161216-linux.tar.bz2
 #+end_src
 
 * Build
@@ -21,16 +31,13 @@ Compile (optionally flash) the =sc-poc= firmware:
 #+begin_src bash :eval never
 cd sc-poc
 # Compile only:
-make -C pca10028/blank/armgcc
+make GNU_INSTALL_ROOT=/opt/gcc-arm-none-eabi-6_2-2016q4 -C pca10028/armgcc 
 # Compile and flash:
-make -C pca10028/blank/armgcc flash
+make GNU_INSTALL_ROOT=/opt/gcc-arm-none-eabi-6_2-2016q4 -C pca10028/armgcc flash
 #+end_src
 
-If =arm-none-eabi-gcc= is not found, use the following:
-
-#+begin_src bash :eval never
-make GNU_INSTALL_ROOT=/path/to/arm-none-eabi/bin -C pca10040/blank/armgcc
-#+end_src
+Or configure the =GNU_INSTALL_ROOT= variable permanently in the
+=$NORDIC_SEMI_SDK_V11/components/toolchain/gcc/Makefile.posix= file.
 
 * Clean
 
@@ -38,5 +45,5 @@ Clean the =sc-poc= firmware build inside the =_build= subdirectory:
 
 #+begin_src bash :eval never
 cd sc-poc
-make -C pca10028/blank/armgcc clean
+make -C pca10028/armgcc clean
 #+end_src
